force-app/main/default/objects/Stripe_Customer__c/Stripe_Customer__c.object-meta.xml
<CustomObject>
    <label>Stripe Customer</label>
    <nameField>
        <label>Stripe Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>