force-app/main/default/objects/Stripe_Customer__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stripe Customers</relationshipLabel>
    <relationshipName>Stripe_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>