force-app/main/default/objects/Stripe_Customer__c/fields/Is_Last_Charge_Failed__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Charge_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Last Charge Failed?</label>
    <type>Checkbox</type>
</CustomField>