force-app/main/default/objects/Stripe_Customer__c/fields/StripeAccountID__c.field-meta.xml
<CustomField>
    <fullName>StripeAccountID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>StripeAccountID</label>
    <referenceTo>Stripe_Account__c</referenceTo>
    <relationshipLabel>Stripe Customers</relationshipLabel>
    <relationshipName>Stripe_Customers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>