force-app/main/default/objects/Stripe_Customer__c/fields/StripeCustomerID__c.field-meta.xml
<CustomField>
    <fullName>StripeCustomerID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>StripeCustomer</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>