force-app/main/default/objects/Stripe_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Balance__c</columns>
    <columns>Email__c</columns>
    <columns>Currency__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>StripeAccountID__c</columns>
    <columns>StripeCustomerID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>